--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -7,15 +7,15 @@
         <div [ngClass]="{'col-md-7': event.mapUrl, 'col-md-12': !event.mapUrl}">
           <app-event-summary [event]="event" [dateValidityProvider]="event"></app-event-summary>
         </div>
-        <div class="col-md-5" *ngIf="event.mapUrl"><img [src]="event.mapUrl" class="img-responsive margin-auto"></div>
+        <div class="col-md-5" *ngIf="event.mapUrl"><img [src]="event.mapUrl" class="img-responsive margin-auto" [alt]="event.location"></div>
     </div>
 
     <hr>
 
     <div class="markdown-content" [innerHTML]="event.description[translate.currentLang]"></div>
 
-
-    <h2 translate="show-event.tickets"></h2>
+    <div #tickets></div>
+    <h2 class="mt-4 mb-4">{{'show-event.tickets' | translate}} <span *ngIf="ticketsLeftCountVisible()" class="badge badge-warning ml-2">{{"show-event.tickets.left" | translate: {'0': event.availableTicketsCount} }}</span></h2>
 
     <div class="alert alert-danger" role="alert" *ngIf="globalErrors && globalErrors.length > 0">
       <div *ngFor="let err of globalErrors"><strong>{{err.code | translate: err.arguments}}</strong></div>
@@ -88,126 +88,94 @@
     </div>
     <!-- end waiting list -->
 
-
-    <div *ngIf="ticketCategories">
-        <form [formGroup]="reservationForm" (submit)="submitForm(event.shortName, reservationForm.value)">
-          <div>
-              <ul class="list-group ticket-categories">
-                <li *ngFor="let category of ticketCategories;let counter = index" formArrayName="reservation" class="list-group-item" [ngClass]="{'ticket-category-restricted': category.accessRestricted }">
-                    <div [formGroupName]="counter" class="row">
-                        <div class="col-8 col-md-7">
-                          <h3>{{category.name}}</h3>
-
-                          <!-- ticket category date handling -->
-                          <div class="text-muted" *ngIf="!category.expired && category.saleInFuture">{{'show-event.sales-not-started'|translate: {'0': category.formattedInception[translate.currentLang]} }}</div>
-                          <div class="text-muted" *ngIf="!category.expired && !category.saleInFuture">{{'show-event.sales-end'|translate: {'0': category.formattedExpiration[translate.currentLang]} }}</div>
-                          <div class="text-muted" *ngIf="category.expired">{{'show-event.sales-ended'|translate: {'0': category.formattedExpiration[translate.currentLang]} }}</div>
-                          <!-- -->
-
-                          <div class="markdown-content mt-2" [innerHTML]="category.description[translate.currentLang]"></div>
-                        </div>
-                        <div class="col-2">
-                          <span *ngIf="category.free" translate="common.free"></span>
-                          <span *ngIf="!category.free">
-                            <ng-container *ngIf="category.hasDiscount"><app-price-tag [event]="event" [formattedPrice]="category.formattedFinalPrice" [showTaxDetails]="true" [discountedPrice]="category.formattedDiscountedPrice"></app-price-tag></ng-container>
-                            <ng-container *ngIf="!category.hasDiscount"><app-price-tag [event]="event" [formattedPrice]="category.formattedFinalPrice" [showTaxDetails]="true"></app-price-tag></ng-container>
-                          </span>
-                        </div>
-                        <div class="col-md-2 offset-md-1">
-                          <ng-container *ngIf="category.saleableAndLimitNotReached">
-                            <select formControlName="amount" class="custom-select">
-                              <option *ngFor="let amount of ticketCategoryAmount[category.id]" [value]="amount">{{amount}}</option>
-                            </select>
-                          </ng-container>
-                          <span *ngIf="!category.saleableAndLimitNotReached && category.soldOutOrLimitReached" translate="show-event.sold-out"></span>
-                          <span *ngIf="!category.saleableAndLimitNotReached && !category.soldOutOrLimitReached" translate="show-event.not-available"></span>
-                        </div>
-                    </div>
-                </li>
-              </ul>
+    <form [formGroup]="reservationForm" (submit)="submitForm(event.shortName, reservationForm.value)" *ngIf="ticketCategories">
+      <div *ngFor="let category of ticketCategories;let counter = index" formArrayName="reservation">
+        <app-item-card [currentLang]="translate.currentLang" [item]="category" [formGroupName]="''+counter" [parentFormGroup]="reservationFormItem(reservationForm, counter)" [additionalClass]="category.accessRestricted ? 'ticket-category-restricted border-warning shadow-sm ': ''">
+          <span class="item-title">
+            {{category.name}} <span class="d-none d-md-inline badge badge-warning ml-2" *ngIf="ticketsLeftCountVisibleForCategory(category)">{{"show-event.tickets.left" | translate: {'0': category.availableTickets} }}</span>
+          </span>
+          <div class="item-price">
+            <span *ngIf="category.free" translate="common.free"></span>
+            <span *ngIf="!category.free">
+              <ng-container *ngIf="category.hasDiscount"><app-price-tag [event]="event" [formattedPrice]="category.formattedFinalPrice" [showTaxDetails]="true" [discountedPrice]="category.formattedDiscountedPrice"></app-price-tag></ng-container>
+              <ng-container *ngIf="!category.hasDiscount"><app-price-tag [event]="event" [formattedPrice]="category.formattedFinalPrice" [showTaxDetails]="true"></app-price-tag></ng-container>
+            </span>
           </div>
-
-
-          <div *ngIf="supplementCategories && supplementCategories.length > 0">
-            <h2 translate="show-event.additional-services"></h2>
-            <ul class="list-group ticket-categories">
-              <li *ngFor="let supplement of supplementCategories" class="list-group-item">
-                <app-additional-service [form]="reservationForm" [additionalService]="supplement" [event]="event"></app-additional-service>
-              </li>
-            </ul>
+          <div class="item-qty-selector">
+              <app-ticket-quantity-selector [parentGroup]="reservationFormItem(reservationForm, counter)" [category]="category" [quantityRange]="ticketCategoryAmount[category.id]"></app-ticket-quantity-selector>
           </div>
-
-          <div *ngIf="donationCategories && donationCategories.length > 0">
-              <h2 translate="show-event.donations"></h2>
-              <ul class="list-group ticket-categories">
-                <li *ngFor="let donation of donationCategories" class="list-group-item">
-                  <app-additional-service [form]="reservationForm" [additionalService]="donation" [event]="event"></app-additional-service>
-                </li>
-              </ul>
+          <div class="badge-sale-period">
+            <span class="badge badge-warning" *ngIf="ticketsLeftCountVisibleForCategory(category)">{{"show-event.tickets.left" | translate: {'0': category.availableTickets} }}</span>
           </div>
-
-          <div *ngIf="eventCode">
-            <hr/>
-            <div>
-              <ul class="list-group">
-                <li class="list-group-item">
-                  <div class="row">
-                    <div class="col-sm-7">
-                      {{'show-event.promo-code-applied' | translate: {'0': (event.promotionsConfiguration.usePartnerCode ? 'show-event.promo-code-type.partner' : 'show-event.promo-code-type.promotional') | translate} }} {{eventCode.code}}
-                      {{' '}}
-                      <fa-icon [icon]="['fas', 'times']" (click)="removePromoCode()"></fa-icon>
-                    </div>
-                    <div class="col-sm-5">
-                      <ng-container *ngIf="eventCode.type === 'DISCOUNT'">
-                        <span *ngIf="eventCode.discountType === 'FIXED_AMOUNT'">
-                          {{'show-event.promo-code-fixed-amount-discount'|translate: {'0': eventCode.discountAmount + ' ' + event.currency} }}
-                        </span>
-                        <span *ngIf="eventCode.discountType === 'PERCENTAGE'">
-                            {{'show-event.promo-code-percentage-discount'|translate: {'0': eventCode.discountAmount + '%'} }}
-                        </span>
-                      </ng-container>
-                    </div>
-                  </div>
-                </li>
-              </ul>
-            </div>
+          <div class="item-qty-selector-mobile">
+              <app-ticket-quantity-selector [parentGroup]="reservationFormItem(reservationForm, counter)" [category]="category" [quantityRange]="ticketCategoryAmount[category.id]"></app-ticket-quantity-selector>
           </div>
-
-
-          <div *ngIf="event.promotionsConfiguration.hasAccessPromotions" [ngClass]="{'alert alert-info': displayPromoCodeForm}" class="mt-4 mt-md-0">
-            <div class="d-flex justify-content-end" *ngIf="!displayPromoCodeForm">
-              <button type="button" class="btn btn-link" (click)="togglePromoCodeVisible()">
-                <fa-icon [icon]="event.promotionsConfiguration.usePartnerCode ? ['far', 'handshake'] : ['fas', 'gift']"></fa-icon>{{' '}}
-                <span>{{'show-event.promo-code'|translate: {'0': (event.promotionsConfiguration.usePartnerCode ? 'show-event.promo-code-type.partner' : 'show-event.promo-code-type.promotional') | translate } }}</span>
-              </button>
-            </div>
-            <div *ngIf="displayPromoCodeForm" class="mt-2">
-              <form [formGroup]="promoCodeForm" (submit)="applyPromoCode()">
-                <div class="form-row">
-                  <div class="col-12 col-md-6 offset-md-1">
-                    <div class="form-group">
-                      <label for="promo-code" class="sr-only">{{'show-event.promo-code-insert' | translate: {'0': (event.promotionsConfiguration.usePartnerCode ? 'show-event.promo-code-type.partner' : 'show-event.promo-code-type.promotional') | translate } }}</label>
-                      <input formControlName="promoCode" [placeholder]="'show-event.promo-code-insert' | translate: {'0': (event.promotionsConfiguration.usePartnerCode ? 'show-event.promo-code-type.partner' : 'show-event.promo-code-type.promotional') | translate }" autocomplete="off" class="form-control" id="promo-code" appInvalidFeedback #promoCode>
-                      <div class="invalid-feedback"></div>
-                    </div>
-                  </div>
-                  <div class="col-12 col-md-4 text-center">
-                    <button class="btn btn-success" translate="show-event.promo-code.apply"></button>
-                    <button class="btn btn-light ml-2" translate="reservation-page-complete.cancel" (click)="togglePromoCodeVisible()"></button>
-                  </div>
-                </div>
-              </form>
-            </div>
-          </div>
-
-          <app-recaptcha [apiKey]="event.captchaConfiguration.recaptchaApiKey" (recaptchaResponse)="handleRecaptchaResponse($event)" *ngIf="event.captchaConfiguration.captchaForTicketSelection && event.captchaConfiguration.recaptchaApiKey"></app-recaptcha>
-
-          <hr class="mt-5">
-          <div class="row d-flex justify-content-between mobile-add-margin-bottom">
-            <div class="col-md-5 order-md-1 col-12"><button type="submit" class="block-button btn btn-success" translate="show-event.continue"></button></div>
-            <div class="col-md-5 order-md-0 col-12 "><a [href]="event.websiteUrl" class="block-button btn btn-light" translate="to-event-site"></a></div>
-          </div>
-        </form>
+        </app-item-card>
       </div>
+
+      <div *ngIf="supplementCategories && supplementCategories.length > 0" class="mt-5 mb-5">
+        <h2 translate="show-event.additional-services"></h2>
+        <app-additional-service *ngFor="let supplement of supplementCategories" [form]="reservationForm" [additionalService]="supplement" [event]="event"></app-additional-service>
+      </div>
+
+      <div *ngIf="donationCategories && donationCategories.length > 0" class="mt-5 mb-5">
+          <h2 translate="show-event.donations"></h2>
+          <app-additional-service *ngFor="let donation of donationCategories" [form]="reservationForm" [additionalService]="donation" [event]="event"></app-additional-service>
+      </div>
+
+      <div class="alert alert-light" *ngIf="eventCode">
+        <div class="d-flex justify-content-between">
+          <div class="h-100">
+            <h5 class="alert-heading"><fa-icon [icon]="event.promotionsConfiguration.usePartnerCode ? ['far', 'handshake'] : ['fas', 'gift']"></fa-icon>{{' '}}{{'show-event.promo-code-applied' | translate: {'0': (event.promotionsConfiguration.usePartnerCode ? 'show-event.promo-code-type.partner' : 'show-event.promo-code-type.promotional') | translate} }} {{eventCode.code}}</h5>
+            <p *ngIf="eventCode.type === 'DISCOUNT'">
+              <span *ngIf="eventCode.discountType === 'FIXED_AMOUNT'">
+                {{'show-event.promo-code-fixed-amount-discount'|translate: {'0': eventCode.discountAmount + ' ' + event.currency} }}
+              </span>
+              <span *ngIf="eventCode.discountType === 'PERCENTAGE'">
+                  {{'show-event.promo-code-percentage-discount'|translate: {'0': eventCode.discountAmount + '%'} }}
+              </span>
+            </p>
+          </div>
+          <div>
+            <button class="btn btn-sm btn-light" type="button" (click)="removePromoCode()" translate="reservation-page.cancel"></button>
+          </div>
+        </div>
+      </div>
+
+
+      <div *ngIf="event.promotionsConfiguration.hasAccessPromotions" [ngClass]="{'alert alert-info': displayPromoCodeForm}" class="mt-4 mt-md-0">
+        <div class="d-flex justify-content-end" *ngIf="!displayPromoCodeForm && eventCode == null">
+          <button type="button" class="btn btn-link" (click)="togglePromoCodeVisible()">
+            <fa-icon [icon]="event.promotionsConfiguration.usePartnerCode ? ['far', 'handshake'] : ['fas', 'gift']"></fa-icon>{{' '}}
+            <span>{{'show-event.promo-code'|translate: {'0': (event.promotionsConfiguration.usePartnerCode ? 'show-event.promo-code-type.partner' : 'show-event.promo-code-type.promotional') | translate } }}</span>
+          </button>
+        </div>
+        <div *ngIf="displayPromoCodeForm" class="mt-2">
+          <ng-form [formGroup]="promoCodeForm">
+            <div class="form-row">
+              <div class="col-12 col-md-6 offset-md-1">
+                <div class="form-group">
+                  <label for="promo-code" class="sr-only">{{'show-event.promo-code-insert' | translate: {'0': (event.promotionsConfiguration.usePartnerCode ? 'show-event.promo-code-type.partner' : 'show-event.promo-code-type.promotional') | translate } }}</label>
+                  <input (keydown.enter)="promoCodeOnEnter($event)" required formControlName="promoCode" [placeholder]="'show-event.promo-code-insert' | translate: {'0': (event.promotionsConfiguration.usePartnerCode ? 'show-event.promo-code-type.partner' : 'show-event.promo-code-type.promotional') | translate }" autocomplete="off" class="form-control" id="promo-code" appInvalidFeedback #promoCode>
+                  <div class="invalid-feedback"></div>
+                </div>
+              </div>
+              <div class="col-12 col-md-4 text-center">
+                <button class="btn btn-success" translate="show-event.promo-code.apply" type="button" [disabled]="promoCodeForm.invalid" (click)="applyPromoCode()"></button>
+                <button class="btn btn-light ml-2" translate="reservation-page-complete.cancel" type="button" (click)="togglePromoCodeVisible()"></button>
+              </div>
+            </div>
+          </ng-form>
+        </div>
+      </div>
+
+      <app-recaptcha [apiKey]="event.captchaConfiguration.recaptchaApiKey" (recaptchaResponse)="handleRecaptchaResponse($event)" *ngIf="event.captchaConfiguration.captchaForTicketSelection && event.captchaConfiguration.recaptchaApiKey"></app-recaptcha>
+
+      <hr class="mt-5">
+      <div class="row d-flex justify-content-between mobile-add-margin-bottom">
+        <div class="col-md-5 order-md-1 col-12"><button type="submit" class="block-button btn btn-success" translate="show-event.continue"></button></div>
+        <div class="col-md-5 order-md-0 col-12 "><a [href]="event.websiteUrl" class="block-button btn btn-light" translate="to-event-site"></a></div>
+      </div>
+    </form>
 
 </div>
