display additional field as "read only" if the field is not marked as "editable"

--- a/src/app/additional-field/additional-field.component.html
+++ b/src/app/additional-field/additional-field.component.html
@@ -1,7 +1,7 @@
 <div [formGroup]="form">
   <div class="form-group" [formArrayName]="field.name">
     <label [attr.for]="ticketUUID + '-' + field.name">{{labelValue + (field.required ? ' *' : '')}}</label>
-    <ng-container [ngSwitch]="field.type">
+    <ng-container [ngSwitch]="field.type" *ngIf="editAllowed">
       <input *ngSwitchCase="'input:text'" [attr.id]="ticketUUID + '-' + field.name" type="text" [attr.placeholder]="placeholder" class="form-control" formControlName="0" appInvalidFeedback>
       <input *ngSwitchCase="'input:tel'" [attr.id]="ticketUUID + '-' + field.name" type="tel" [attr.placeholder]="placeholder" class="form-control" formControlName="0" appInvalidFeedback>
       <input *ngSwitchCase="'vat:eu'" [attr.id]="ticketUUID + '-' + field.name" type="text" [attr.placeholder]="placeholder" class="form-control" formControlName="0" appInvalidFeedback>
@@ -26,5 +26,8 @@
         </div>
       </div>
     </ng-container>
+    <div class="form-control-plaintext" *ngIf="!editAllowed">
+      {{ getRestrictedValueLabel(field.value) }}
+    </div>
   </div>
 </div>
