--- a/src/app/reservation/ticket-form/ticket-form.component.html
+++ b/src/app/reservation/ticket-form/ticket-form.component.html
@@ -1,7 +1,7 @@
 <div class="row mt-4">
   <div *ngIf="ticket" [formGroup]="form" class="col-md-10 offset-md-1">
     <div *ngFor="let field of ticket.ticketFieldConfigurationBeforeStandard">
-      <app-additional-field [field]="field" [ticketUUID]="ticket.uuid" [form]="form.get('additional')"></app-additional-field>
+      <app-additional-field [field]="field" [ticketUUID]="ticket.uuid" [form]="form.get('additional')" [ticketAcquired]="ticket.acquired"></app-additional-field>
     </div>
 
     <div class="form-row">
@@ -25,7 +25,7 @@
     </div>
 
     <div *ngFor="let field of ticket.ticketFieldConfigurationAfterStandard">
-      <app-additional-field [field]="field" [ticketUUID]="ticket.uuid" [form]="form.get('additional')"></app-additional-field>
+      <app-additional-field [field]="field" [ticketUUID]="ticket.uuid" [form]="form.get('additional')" [ticketAcquired]="ticket.acquired"></app-additional-field>
     </div>
 
     <div class="form-group" *ngIf="event && event.contentLanguages.length > 1">
