add dynamic countdown

--- a/src/app/countdown/countdown.component.html
+++ b/src/app/countdown/countdown.component.html
@@ -1,4 +1,4 @@
-<div class="alert alert-info text-center">
+<div class="alert text-center" [ngClass]="'alert-'+alertType" [class.sticky]="displaySticky">
     <fa-icon [icon]="['far', 'clock']"></fa-icon>{{' '}}
     <span *ngIf="!isExpired" [innerHTML]="message"></span>
     <strong *ngIf="isExpired" translate="error.STEP_2_ORDER_HAS_EXPIRED"></strong>
