--- a/src/app/reservation/ticket-form/ticket-form.component.html
+++ b/src/app/reservation/ticket-form/ticket-form.component.html
@@ -1,5 +1,5 @@
-<div class="row mt-4">
-  <div *ngIf="ticket" [formGroup]="form" class="col-md-10 offset-md-1">
+<div class="row">
+  <div *ngIf="ticket" [formGroup]="form" class="col">
     <div *ngFor="let field of ticket.ticketFieldConfigurationBeforeStandard">
       <app-additional-field [field]="field" [ticketUUID]="ticket.uuid" [form]="form.get('additional')" [ticketAcquired]="ticket.acquired"></app-additional-field>
     </div>
