--- a/src/app/reservation/success/success.component.html
+++ b/src/app/reservation/success/success.component.html
@@ -1,5 +1,3 @@
-<h1 translate="reservation-page-complete.your-tickets"></h1>
-
 
 <div class="alert alert-success alert-dismissible" role="alert" *ngIf="reservationMailSent">
   <button type="button" class="close" (click)="reservationMailSent = false"><span aria-hidden="true">&times;</span><span class="sr-only" translate="reservation-page-complete.cancel"></span></button>
@@ -8,13 +6,13 @@
 
 
 <div *ngIf="reservationInfo && event">
-  <div class="alert alert-success">
+  <div class="alert alert-success mb-5">
       <div class="row">
           <div class="col-sm-12">
             <h3 [innerHTML]="'reservation-page-complete.info-assign' | translate: {'0':event.displayName}"></h3>
           </div>
       </div>
-      <div class="row">
+      <div class="row mt-2">
           <div class="col-sm-12" [innerHTML]="'reservation-page-complete.info-assign-email' | translate: {'0':reservationInfo.email}"></div>
       </div>
       <div class="row">
@@ -39,80 +37,81 @@
       </div>
   </div>
 
-
-  <div *ngIf="event.assignmentConfiguration.enableTicketTransfer && ticketsAllAssigned && unlockedTicketCount > 0">
-      <p class="bg-info ticket-info" translate="reservation-page-complete.info-update"></p>
-  </div>
-
+  <h1 translate="reservation-page-complete.your-tickets"></h1>
   <div *ngFor="let tc of reservationInfo.ticketsByCategory">
-    <div *ngFor="let ticket of tc.tickets">
-      <div class="attendees-data">
-        <h3><fa-icon [icon]="['fas', 'ticket-alt']" size="xs" [classes]="['rotate-45']"></fa-icon> {{'reservation-page-complete.ticket-nr' | translate}}<span class="ticket-counter"></span></h3>
-      </div>
-      {{'reservation-page-complete.ticket-type'|translate}} <strong>{{tc.name}}</strong>
-
-      <div *ngIf="ticket.assigned" class="wMarginBottom">
-        <p>
-          <span [innerHTML]="'reservation-page-complete.assigned-to' | translate: {'0': ticket.fullName, '1': ticket.email}"></span>
-          <ng-container *ngIf="ticket.cancellationEnabled">
-            {{' '}}
-            <button type="button" class="btn btn-xs btn-danger" (click)="ticketsReleaseShow[ticket.uuid] = true"><fa-icon [icon]="['fas', 'eraser']" size="xs"></fa-icon> {{'reservation-page-complete.release-button.text'|translate}}</button>
-          </ng-container>
-        </p>
-
-        <div tabindex="-1" role="dialog" *ngIf="ticketsReleaseShow[ticket.uuid]">
-          <div class="alert alert-danger">
-            <h4>{{'reservation-page-complete.confirm-cancellation.text' | translate}}{{' '}}
-              <button type="button" (click)="ticketsReleaseShow[ticket.uuid] = false" class="btn btn-default cancel-update" translate="reservation-page-complete.confirm-cancellation.button.no"></button>
+    
+    <div class="card mt-4" *ngFor="let ticket of tc.tickets" [ngClass]="{'border-left-warning': !ticket.assigned, 'shadow': ticketsFormShow[ticket.uuid], 'border-left-success': ticket.assigned && !ticketsFormShow[ticket.uuid]}">
+      <div class="card-body">
+        <div class="attendees-data d-flex w-100 justify-content-between">
+          <h3 class="card-title"><fa-icon [icon]="['fas', ticket.assigned ? 'check' : 'exclamation-triangle']" size="xs" [classes]="[ ticket.assigned ? 'text-success' : 'text-warning']"></fa-icon> {{'reservation-page-complete.ticket-nr' | translate}}<span class="ticket-counter"></span> <small class="ml-2 text-muted">- {{tc.name}}</small></h3>
+          <h3 class="card-title" *ngIf="ticket.assigned">
+            {{ticket.fullName}}
+            <ng-container *ngIf="ticket.cancellationEnabled">
               {{' '}}
-              <button type="button" (click)="releaseTicket(ticket)" class="btn btn-danger" translate="reservation-page-complete.confirm-cancellation.button.yes"></button>
-            </h4>
-          </div>
+              <button type="button" class="btn btn-xs btn-danger" (click)="ticketsReleaseShow[ticket.uuid] = true"><fa-icon [icon]="['fas', 'eraser']" size="xs"></fa-icon> {{'reservation-page-complete.release-button.text'|translate}}</button>
+            </ng-container>
+          </h3>
+          <h3 class="card-title text-muted" *ngIf="!ticket.assigned">{{'reservation-page-complete.ticket-not-assigned' | translate }}</h3>
         </div>
-
-        <div class="row">
-          <div class="col-lg-3 col-sm-6 col-12 wMarginBottom">
-            <a [routerLink]="['/event', event.shortName, 'ticket', ticket.uuid, 'view']" target="_blank" class="btn btn-primary btn-block"><fa-icon [icon]="['fas', 'search-plus']"></fa-icon> {{'reservation-page-complete.show-ticket'|translate}}</a>
-          </div>
-          <div class="col-lg-3 col-sm-6 col-12 wMarginBottom">
-            <a [attr.href]="'/api/v2/public/event/' + event.shortName + '/ticket/' + ticket.uuid + '/download-ticket'" class="btn btn-primary btn-block"><fa-icon [icon]="['fas', 'download']"></fa-icon> {{'reservation-page-complete.download-ticket'|translate}}</a>
-          </div>
-          <div class="col-lg-3 col-sm-6 col-12 wMarginBottom">
-            <button type="button" class="btn btn-primary btn-block send-ticket-by-email" (click)="sendEmailForTicket(ticket.uuid)"><fa-icon [icon]="['far', 'envelope']"></fa-icon> {{'reservation-page-complete.send-ticket-by-email-to'|translate}}</button>
-          </div>
-          <div class="col-lg-3 col-sm-6 col-12 wMarginBottom">
-            <button type="button" class="btn btn-primary btn-block update-ticket-owner" (click)="ticketsFormShow[ticket.uuid] = true"><fa-icon [icon]="['far', 'edit']"></fa-icon> {{'reservation-page-complete.update-ticket-owner'|translate}}</button>
-          </div>
-        </div>
-      </div>
-
-      <div *ngIf="ticketsFormShow[ticket.uuid] || !ticket.assigned" class="wMarginBottom">
-        <form [formGroup]="ticketsFormControl[ticket.uuid]" (submit)="updateTicket(ticket.uuid)">
-          <app-ticket-form [ticket]="ticket" [event]="event" [form]="ticketsFormControl[ticket.uuid]"></app-ticket-form>
-          <div class="row">
-            <div class="col-sm-3"></div>
-            <div class="col-sm-9">
-              <div class="row">
-                <div class="order-1 col-6 text-right"><button type="submit" class="btn btn-success">{{ (ticket.assigned ? 'reservation-page-complete.update' : 'reservation-page-complete.assign') | translate}}</button></div>
-                <div class="order-0 col-6"><button type="button" (click)="ticketsFormShow[ticket.uuid] = false" translate="reservation-page-complete.cancel" class="btn btn-light" *ngIf="ticket.assigned"></button></div>
-              </div>
+        <hr *ngIf="!ticketFormVisible">
+        
+        <div *ngIf="ticket.assigned">
+          <div tabindex="-1" role="dialog" *ngIf="ticketsReleaseShow[ticket.uuid]"> <!-- TODO ng-template -->
+            <div class="alert alert-danger">
+              <h4>{{'reservation-page-complete.confirm-cancellation.text' | translate}}{{' '}}
+                <button type="button" (click)="ticketsReleaseShow[ticket.uuid] = false" class="btn btn-default cancel-update" translate="reservation-page-complete.confirm-cancellation.button.no"></button>
+                {{' '}}
+                <button type="button" (click)="releaseTicket(ticket)" class="btn btn-danger" translate="reservation-page-complete.confirm-cancellation.button.yes"></button>
+              </h4>
             </div>
           </div>
-        </form>
-      </div>
+        </div>
 
-      <div class="alert alert-success wMarginTop30px wMarginBottom hidden alert-dismissible" role="alert" *ngIf="sendEmailForTicketStatus[ticket.uuid]">
-        <button type="button" class="close" (click)="sendEmailForTicketStatus[ticket.uuid] = false"><span aria-hidden="true">&times;</span><span class="sr-only" translate="reservation-page-complete.cancel"></span></button>
-        <strong translate="email.ticket-email-sent"></strong>
+        <div class="row" *ngIf="!ticketFormVisible">
+          <div class="col-lg-3 col-sm-6 col-12" *ngIf="ticket.assigned">
+            <a [routerLink]="['/event', event.shortName, 'ticket', ticket.uuid, 'view']" target="_blank" class="btn btn-default btn-block"><fa-icon [icon]="['fas', 'search-plus']"></fa-icon> {{'reservation-page-complete.show-ticket'|translate}}</a>
+          </div>
+          <div class="col-lg-3 col-sm-6 col-12" *ngIf="ticket.assigned">
+            <a [attr.href]="'/api/v2/public/event/' + event.shortName + '/ticket/' + ticket.uuid + '/download-ticket'" class="btn btn-default btn-block"><fa-icon [icon]="['fas', 'download']"></fa-icon> {{'reservation-page-complete.download-ticket'|translate}}</a>
+          </div>
+          <div class="col-lg-3 col-sm-6 col-12" *ngIf="ticket.assigned">
+            <button type="button" class="btn btn-default btn-block send-ticket-by-email" (click)="sendEmailForTicket(ticket.uuid)"><fa-icon [icon]="['far', 'envelope']"></fa-icon> {{'reservation-page-complete.send-ticket-by-email-to'|translate}}</button>
+          </div>
+          <div class="col-lg-3 col-sm-6 col-12" [ngClass]="{'offset-lg-9 offset-sm-6': !ticket.assigned}">
+            <button type="button" class="btn btn-default btn-block update-ticket-owner" (click)="ticketsFormShow[ticket.uuid] = true"><fa-icon [icon]="ticket.assigned ? ['far', 'edit'] : ['fas', 'check']"></fa-icon> {{(ticket.assigned ? 'reservation-page-complete.update-ticket-owner' : 'reservation-page-complete.assign') |translate}}</button>
+          </div>
+        </div>
+  
+        <div *ngIf="ticketsFormShow[ticket.uuid]" class="mt-4">
+          <div class="alert alert-info" translate="reservation-page-complete.info-update" *ngIf="event.assignmentConfiguration.enableTicketTransfer && ticket.assigned && !ticket.locked"></div>
+          <form [formGroup]="ticketsFormControl[ticket.uuid]" (submit)="updateTicket(ticket.uuid)">
+            <app-ticket-form [ticket]="ticket" [event]="event" [form]="ticketsFormControl[ticket.uuid]"></app-ticket-form>
+            <div class="bg-white pb-3 pt-3" [class.sticky]="ticket.ticketFieldConfigurationAfterStandard.length > 0">
+              <div class="row d-flex justify-content-between">
+                <div class="col-md-5 order-md-1 col-12">
+                  <button type="submit" class="btn btn-success btn-block">{{ (ticket.assigned ? 'reservation-page-complete.update' : 'reservation-page-complete.assign') | translate}}</button>
+                </div>
+                <div class="col-md-5 order-md-0 col-12">
+                  <button type="button" (click)="hideTicketForm(ticket.uuid)" translate="reservation-page-complete.cancel" class="btn btn-light btn-block"></button>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+  
+        <div class="alert alert-success mt-2 mb-2 hidden alert-dismissible" role="alert" *ngIf="sendEmailForTicketStatus[ticket.uuid]">
+          <button type="button" class="close" (click)="sendEmailForTicketStatus[ticket.uuid] = false"><span aria-hidden="true">&times;</span><span class="sr-only" translate="reservation-page-complete.cancel"></span></button>
+          <strong translate="email.ticket-email-sent"></strong>
+        </div>
       </div>
     </div>
   </div>
 
-  <div class="row d-flex justify-content-between wMarginTop30px">
-    <div class="col-md-5 order-md-1 col-12 wMarginBottom">
+  <div class="row d-flex justify-content-between mt-5" *ngIf="!ticketFormVisible">
+    <div class="col-md-5 order-md-1 col-12 mb-2">
       <a class="block-button btn btn-success" [routerLink]="['/event', event.shortName]" translate="buy-other-tickets"></a>
     </div>
-    <div class="col-md-5 order-md-0 col-12 wMarginBottom">
+    <div class="col-md-5 order-md-0 col-12 mb-2">
       <a class="block-button btn btn-light" [attr.href]="event.websiteUrl" translate="to-event-site"></a>
     </div>
   </div>
