--- a/src/app/reservation/success/success.component.scss
+++ b/src/app/reservation/success/success.component.scss
@@ -1,3 +1,6 @@
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+
 p.ticket-info {
     padding: 15px;
     margin-top: 10px;
@@ -11,4 +14,30 @@ p.ticket-info {
     color: #333;
     background-color: #fff;
     border-color: #ccc;
+}
+
+.btn-default:hover {
+    color: #212529;
+    background-color: #e2e6ea;
+    border-color: #ccc;
+}
+
+.btn-default:focus, .btn-default.focus {
+    box-shadow: 0 0 0 0.2rem rgba(216, 217, 219, 0.5);
+}
+
+.sticky {
+    position: -webkit-sticky;
+    position: sticky;
+    bottom: 0px;
+    left: 0px;
+    z-index: 9999;
+}
+
+.border-left-warning {
+    border-left: 5px solid theme-color("warning");
+}
+
+.border-left-success {
+    border-left: 5px solid theme-color("success");
 }
