--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,8 +8,11 @@ $font-family-sans-serif: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "
 
 @import "~@ng-select/ng-select/themes/default.theme.css";
 
-body {
-    background-color: #E5E5E5;
+
+@include media-breakpoint-up(md) {
+    body {
+        background-color: #E5E5E5;
+    }
 }
 
 .application-container {
